--- a/aop-demo/pom.xml
+++ b/aop-demo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>aop</artifactId>
+    <artifactId>aop-demo</artifactId>
 
     <dependencies>
         <dependency>
