--- a/concurrent-demo/pom.xml
+++ b/concurrent-demo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>string</artifactId>
+    <artifactId>concurrent-demo</artifactId>
 
 
 </project>
