--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>jedis-demo</module>
         <module>utils-demo</module>
         <module>kafka-demo</module>
+        <module>ssm-demo</module>
     </modules>
     <packaging>pom</packaging>
 </project>
