--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,13 @@
         <module>concurrent-demo</module>
         <module>GenerateClass</module>
         <module>storm-demo</module>
-        <module>jedis-demo</module>
         <module>utils-demo</module>
         <module>kafka-demo</module>
         <module>ssm-demo</module>
         <module>oom-demo</module>
         <module>algorithm-demo</module>
         <module>data-structure-demo</module>
+        <module>redis-demo</module>
     </modules>
     <packaging>pom</packaging>
 </project>
