--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>algorithm-demo</module>
         <module>data-structure-demo</module>
         <module>redis-demo</module>
+        <module>agent-demo</module>
     </modules>
     <packaging>pom</packaging>
 </project>
