--- a/rx-demo/pom.xml
+++ b/rx-demo/pom.xml
@@ -9,7 +9,15 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oom-demo</artifactId>
+    <artifactId>rx-demo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
