--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>jvm-demo</module>
         <module>rx-demo</module>
         <module>kilim-demo</module>
+        <module>thread-demo</module>
     </modules>
     <packaging>pom</packaging>
 </project>
