--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spring-web</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
