--- a/spring-demo/pom.xml
+++ b/spring-demo/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>spring-context-support</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.26</version>
+        </dependency>
     </dependencies>
 
 </project>
